<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="la.hackspace.networkingadapter.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/glLineaBoton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:text="@string/Crypto"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/Negro"
        android:id="@+id/tvTitulo"/>  <!-- Titulo -->

    <Button
        android:id="@+id/buMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="MostrarDatos"
        android:text="@string/Mostrar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glLineaBoton"
        android:visibility="gone"/>  <!-- Boton de datos -->

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Descargando"
        android:textStyle="italic"
        android:textColor="@color/Rojo"
        android:id="@+id/tvDescargando"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glLineaBoton"
        android:textSize="20sp"/>  <!-- Texto de carga -->

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbCargar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescargando"/> <!-- Barra de carga -->


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"
        android:id="@+id/glLineaBoton"/> <!-- Linea Horizontal -->

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"
        android:id="@+id/glLineaCargar"/> <!-- Linea Vertical -->


</android.support.constraint.ConstraintLayout>
